force-app/main/default/objects/Case/fields/Comment_Replied__c.field-meta.xml
<CustomField>
    <fullName>Comment_Replied__c</fullName>
    <label>Comment Replied</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>