force-app/main/default/objects/Case/fields/HashTag__c.field-meta.xml
<CustomField>
    <fullName>HashTag__c</fullName>
    <label>HashTag(#)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>