force-app/main/default/objects/Case/fields/Link_to_Tweet_comment__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Tweet_comment__c</fullName>
    <formula>HYPERLINK( Tweet_Comment_URL__c , &apos;Visit to tweet Comment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to comment</label>
    <type>Text</type>
</CustomField>