force-app/main/default/objects/Case/fields/Tweet_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Comment_Id__c</fullName>
    <label>Hash Tag Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>