force-app/main/default/objects/Case/fields/Tweet_Comment_URL__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Comment_URL__c</fullName>
    <label>Comment URL</label>
    <type>Url</type>
</CustomField>