force-app/main/default/objects/Case/fields/Tweet_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Comments__c</fullName>
    <label>Comments JSON</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>