force-app/main/default/objects/Case/fields/Tweet_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Created_Time__c</fullName>
    <label>Created Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>