force-app/main/default/objects/Case/fields/Tweet_Id__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Id__c</fullName>
    <label>Post Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>