force-app/main/default/objects/Case/fields/tweet_related_to__c.field-meta.xml
<CustomField>
    <fullName>tweet_related_to__c</fullName>
    <label>Related to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>