force-app/main/default/objects/Case/fields/Tweet_URL__c.field-meta.xml
<CustomField>
    <fullName>Tweet_URL__c</fullName>
    <label>POST URL</label>
    <type>Url</type>
</CustomField>