force-app/main/default/objects/Case/recordTypes/Instagram.recordType-meta.xml
<RecordType>
    <fullName>Instagram</fullName>
    <active>true</active>
    <businessProcess>Instagram</businessProcess>
    <label>Instagram</label>
</RecordType>