force-app/main/default/objects/Case/listViews/Instagram_Cases.listView-meta.xml
<ListView>
    <fullName>Instagram_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Tweet_Created_Time__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Tweet_URL__c</columns>
    <columns>Tweet_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Instagram</value>
    </filters>
    <label>Instagram Cases</label>
</ListView>